<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreferenceCompat

            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/date_format">
        <ListPreference
            android:defaultValue="date_numbers"
            android:entries="@array/date_entries"
            android:entryValues="@array/date_values"
            android:key="date_format"
            android:title="@string/date_hour" />


    </PreferenceCategory>

</PreferenceScreen>